# person_study

./: .gitignore  pyproject.toml
.claude/: settings.local.json
.claude/skills/wechat-auto/: SKILL.md
claude-code-commands/: README.md
crewai_demo/: 01_basic_crew.py  02_flow_router.py  03_thinking_config.py
large_model/: 01_deep_agent_demo.py  02_langchain_demo.py
mcp_client/: 01_mysq_mcp_demo.py
pywinauto/: auto_reply.py  uia_wechat.py  wechat_demo.py  weix_agent.py
ryhtoolsWinAutoWx/: github_trending.json  mcp_launcher.py  mcp_server.py  server.py
voice_mode_windows/: __init__.py  asr.py  debug_test.py  demo.py  tts.py
wechat-auto-server/: pyproject.toml
wechat-auto-server/wechat_auto/: __init__.py  api.py  cli.py  config.py  mcp.py
wechat-auto-server/wechat_auto/agent/: __init__.py  filters.py  images.py  llm.py  monitors.py  runner.py
wechat-auto-server/wechat_auto/backends/: __init__.py  base.py  pywinauto_bk.py  uia_bk.py
wechat-decrypt/: decode_image.py  decrypt_db.py  find_image_key.py  find_image_key_monitor.py  mcp_server.py  monitor_web.py
